--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "materialize-css": "^0.100.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-infinite-scroller": "^1.1.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   }
