--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "prop-types": "^15.6.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "materialize-css": "^0.100.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "validator": "^10.2.0"
   }
 }
